<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/generateQrCodeOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/generate_new_qr_code"
            android:textSize="16sp" />

        <!-- Buttons to continue and cancel -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/organizerCreateEventContinueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizerCreateEventContinue" />

            <Button
                android:id="@+id/organizerCreateEventCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizerCreateEventCancel" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>