<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/create_alert_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/create_alert_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_alert_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:maxLines="2"
            android:textSize="22sp">
        </EditText>

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:hint="@string/enter_message"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:textSize="22sp">
        </EditText>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alert_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/message_edit_text"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_alert_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/light_gray"
                android:ems="7"
                android:text="@string/organizerCreateEventCancel"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/create_alert_send_button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_alert_send_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/light_gray"
                android:ems="7"
                android:text="@string/send_button"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/create_alert_cancel_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>