<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".organizer.OrganizerMainMenuActivity"
    android:id="@+id/organizer_menu_layout">

    <LinearLayout
        android:id="@+id/eventContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/list_rounded_corners"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/CreateEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/EventListViewTitle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_rounded_corners"
            android:gravity="center"
            android:text="@string/your_events"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ListView
            android:id="@+id/EventListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:background="#dfe4ea"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/CreateEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/light_gray"
        android:ems="8"
        android:text="@string/create_event"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/OrganizerMainMenuBackButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OrganizerMainMenuBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_gray"
        android:ems="5"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/CreateEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CreateEventButton"
        app:layout_constraintTop_toTopOf="@+id/CreateEventButton" />

</androidx.constraintlayout.widget.ConstraintLayout>