<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".admin.AdminActivity">

    <LinearLayout
        android:id="@+id/event_layout"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/list_rounded_corners"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_rounded_corners"
            android:gravity="center"
            android:text="@string/events_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp">
        </TextView>

        <ListView
            android:id="@+id/event_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_below="@+id/event_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/list_rounded_corners"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_rounded_corners"
            android:gravity="center"
            android:text="@string/users_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp">
        </TextView>

        <ListView
            android:id="@+id/user_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice">
        </ListView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/light_gray"
        android:ems="5"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>